tests-integration/tests/roundtrip/invalid/semantic/typecheck/int_as_constraint/int_as_constraint.essence
letting y be 5
find x : int
such that x
such that y